# rust-parallelism

./: README.md  openmp_gauss  openmp_gauss.c
gaussian_elimination/: Cargo.toml  o  results.csv  run_experiment.sh
gaussian_elimination/src/: .nfs00000000004350d800000076  .threaded.rs.swp  arc.rs  lib.rs  main.rs  threaded.rs
ge_array/: Cargo.toml
ge_array/src/: lib.rs  main.rs
go/: gaussian.go
java/: GaussianElimination.java
matrices_dense/: matrix_gen
message_passing/: Cargo.toml
message_passing/src/: lib.rs  main.rs
thr_test/: Cargo.toml
thr_test/src/: main.rs
