[package]
name = "gaussian_elimination"
version = "0.1.0"
authors = ["jammin-ben <benjamin.reber19@houghton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
[dependencies]
rand= "0.8.3"
